

using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class LoaderUpdate : MonoBehaviour {

    private void Update() {
        Loader.LoadTargetScene();
    }

}
